<resources>
    <string name="app_name">HireCarApp</string>
    <string name="signupname">Create Account</string>
    <string name="signup_buttton">Sign Up</string>

    <string name="signup_google">Continue with Google</string>
    <string name="option">OR</string>

    <string name="imagedesc">Image Description</string>

    <string name="emailhint">Email Address</string>
    <string name="fullnamehint">Full Name</string>
    <string name="mbno">Mobile Number</string>
    <string name="pwd">Password</string>
    <string name="dlnumber">DL(Driving Licence) Number</string>
    <string name="selectimgbtn">Select Image</string>

    <string name="loginname">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_button">Login</string>
    <string name="dnhaa">Don\'t have an account?</string>
    <string name="ahaa">Already have an account?</string>

    <string name="comp_name">HireCar</string>
    <string name="tagline">Book, Receive And Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_in_ahmedabd">Search in Ahmedabad</string>

    <string name="selectploc">Select Pickup Location</string>
    <string name="selectdloc">Select Drop Location</string>

    <string name="viewusers">View Users</string>

    <string name="viewcars">View Cars</string>
    <string name="viewlocations">View Locations</string>
    <string name="viewbookings">View Bookings</string>

    <string name="add_users">Add Users</string>
    <string name="add_locations">Add Location</string>
    <string name="add_cars">Add Car</string>

    <string name="del_users">Delete Users</string>
    <string name="del_locations">Delete Location</string>
    <string name="del_cars">Delete Car</string>

    <string name="up_users">Update Users</string>
    <string name="up_locations">Update Location</string>
    <string name="up_cars">Update Car</string>
    <string name="car_location_name">ISKCON Temple near Sarkhej - Gandhinagar Highway, Bodakdev, Ahmedabad, Gujarat</string>
    <string name="pickuploc">ISKCON Temple near Sarkhej - Gandhinagar Highway, Bodakdev, Ahmedabad, Gujarat</string>
    <string name="droploc">Paldi Cross Roads, Kocharab, Ahmedabad, Gujarat</string>

</resources>