<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview_welcomescreen"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome_screen"
    android:padding="10dp"
    android:background="@color/colorSecondaryPink"
    android:scrollbars="none"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

         <ImageView
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:src="@drawable/receivedmessage1"
             android:contentDescription="@string/imagedesc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="@string/comp_name"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkPink"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:layout_gravity="center"
            android:fontFamily="@font/oxygen"
            android:textColor="@color/colorDarkPink"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/welcome_login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="Suspicious0dp"
                android:text="@string/loginname"
                android:textSize="20sp"
                android:padding="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/colorDarkPink"
                android:fontFamily="@font/oxygen_bold"
                style="@style/Widget.Material3.Button.Icon"
                android:onClick="callLoginScreen"
                android:transitionName="transition_login"/>

            <Button
                android:id="@+id/welcome_signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="Suspicious0dp"
                android:text="@string/signup_buttton"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="20dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/colorDarkPink"
                android:fontFamily="@font/oxygen_bold"
                style="@style/Widget.Material3.Button.Icon"
                android:onClick="callSignUpScreen"
                android:transitionName="transition_signup"/>


        </LinearLayout>
    </LinearLayout>
</ScrollView>